[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/ControlBlock.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/left.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[node name="ControlLeft" type="KinematicBody2D"]
script = ExtResource( 1 )
control_type = 1

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 4

[node name="Control" type="Control" parent="."]
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )
[connection signal="gui_input" from="Control" to="." method="_on_Control_gui_input"]
[connection signal="mouse_entered" from="Control" to="." method="_on_Control_mouse_entered"]
[connection signal="mouse_exited" from="Control" to="." method="_on_Control_mouse_exited"]
